--- a/login/Node/vercel.json
+++ b/login/Node/vercel.json
@@ -1,16 +1,3 @@
 {
-
-    "version": "2",
-    "builds": [
-        {
-            "src": "./src/app.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/src/index.js"
-        }
-    ]
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
