--- a/login/Node/vercel.json
+++ b/login/Node/vercel.json
@@ -1,3 +1,18 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+    "routes":[
+        {
+         "src" : "/login",
+            "dest" : "/"
+
+        },
+        {
+            "src" : "/cadastro",
+            "dest" : "/"
+        },
+        {
+            "src" : "/home",
+            "dest" : "/"
+        }
+
+    ]
 }
