--- a/cadastrar_video/cadastra_video_react/vercel.json
+++ b/cadastrar_video/cadastra_video_react/vercel.json
@@ -1,3 +1,16 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+    "routes": [
+        {
+            "path": "/",
+            "dest" : "/"
+        },
+        {
+            "path": "/cadastroadm",
+            "dest" : "/"
+        },
+        {
+            "path": "/loginadm",
+            "dest" : "/"
+        }
+    ]
 }
